--- a/styles.css
+++ b/styles.css
@@ -59,15 +59,19 @@ figcaption {
 .abstract-container {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    transition: max-height 0.2s ease-out, padding 0.2s ease-out, border 0.2s ease-out;
     display: flex;    
+    border: 2px dashed transparent;
+    padding: 0px 10px 0px 10px; /* top | right | bottom | left*/
+    margin-top: 0px;
 }
 
-
-  
 .abstract-container.show {
     max-height: 500px; /* Adjust this value based on your needs */
-    transition: max-height 0.5s ease-in;
+    transition: max-height 0.2s ease-in, padding 0.2s ease-in, border 0.2s ease-in;
+    border: 2px dashed #ccc; /* Change color as needed */
+    padding: 0px 10px 0px 10px; /* top | right | bottom | left*/
+    margin-top: 15px;
 }
 
 
